fix wrap alignment

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,7 +29,6 @@ main {
 
 .wrap {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
